README: add Java versions section and required data files
- Add Java versions table (JDK 8, 11, 17, 21, LTS) and JavaFX note
- Add Required data files step for Day 24 and Day 25
- Link Tools section to Java versions